# telegram-bot-api

./: .gitignore  README.md  pyproject.toml
src/telegram_bot_api/: __init__.py  client.py  serializable.py  types.py
tests/: test_client.py  test_installation.py
tools/: docs_generate.py  docs_markdown.py  docs_split.py  loop_updates.py
