[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "telegram-bot-api"
version = "0.0.1"
authors = [
  { name="Stefano Negri Merlo", email="negrimerlostefano@gmail.com" },
]
description = "A telegram bot client"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-only"
license-files = ["LICEN[CS]E*"]
dependencies = [
  "requests",
]

[project.urls]
Homepage = "https://github.com/emptydatabase/telegram-bot-api"
Issues = "https://github.com/emptydatabase/telegram-bot-api/issues"
